--- a/templates/hello_page.html.twig
+++ b/templates/hello_page.html.twig
@@ -1,1 +1,7 @@
-Hello, CodeReviewVideos!
+{% extends 'base.html.twig' %}
+{% block title %} Hi {% endblock %}
+{% block main %}
+    {#{{ dump() }}#}
+    {#{{ dump(app.request.query.get('name')) }}#}
+    Hello, {{ app.request.query.get('name') | default('CodeReviewVideos.com') }}
+{% endblock %}
