--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,7 +43,8 @@
 </header>
 
 <main role="main" class="container main">
-    {% block main %} {% endblock %}
+  {% include 'flash_message.html.twig' %}
+  {% block main %} {% endblock %}
 </main>
 
 {% block javascripts %} {% endblock %}
